* What's new in the next release

  [http]

  - #419: more fixes for movie searches


* What's new in release 2022.11.04 (John Wick)

  [http]

  - #232: add get_showtimes() method (courtesy of Kostya Farber)
  - #388: add 'videos' key to extract movie trailer links
  - #391: add parental guide advisory votes (courtesy of salehdeh76)
  - #395: fix for some wrongly-formatted titles (courtesy of tsaklidis)
  - #396: raise exception on resize image (courtesy of tsaklidis)
  - #398: fix for production status
  - #415: change User-Agent to a more complete form
  - #419: fix movie and person searches
  - #420: introduce a contributor guide (courtesy of Elizabeth Thorne)
  - #421: fixes for person parsers


* What's new in release 2022.02.11 (the Cinemagoer Strikes Back release)

  [http]

  - #373: include TV shows in get top 50 by genre
  - #378: update documentation

  [s3]

  - #378: rename s32imdbpy.py to s32cinemagoer.py



* What's new in release 2022.01.25 (the Cinemagoer release)

  [general]

  - #238: by default, exceptions are raised
  - #315: include all script in the ./bin directory
  - #318: fix kind of tv mini series in search results
  - #369: do not rebuild locales running setup.py clean
  - #371: support for 8-digit imdbIDs
  - #378: renamed to cinemagoer

  [http]

  - #308: fix movie connections parser
  - #319: parse review rating
  - #327: do not strip new lines
  - #329: improve localized and original title
  - #330: fix for tv series for seasons not found
  - #331: fix kind of tv mini series in search results
  - #342: parse all information from full credits
  - #343: fix for mpaa and certificates from parental guide page
  - #344: extract advisories from parental guide page
  - #346: collect raw info from country code
  - #348: fix for series with no episodes
  - #349: relevant keywords
  - #357: add support for TV Special
  - #366: fix full-size image links
  - #372: support fox box office charts

