@@ -47,7 +47,6 @@ dev = [
     "flake8-isort",
     "sphinx",
     "sphinx-rtd-theme",
-    "polib",
     "tox",
     "build",
 ]
@@ -105,5 +104,5 @@ commands =
 """
 
 [build-system]
-requires = ["setuptools", "setuptools-scm", "mo-installer"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
