@@ -23,7 +23,6 @@ packaging==22.0
 pep517==0.13.0
 platformdirs==2.6.0
 pluggy==1.0.0
-polib==1.1.1
 py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
