@@ -3,6 +3,8 @@
   [http]
 
   - #419: more fixes for movie searches
+  - better handling of locales
+  - fixes for python2.7
 
 
 * What's new in release 2022.11.04 (John Wick)
